# ember

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  404.html  README.md  book.toml  contributors.html  ember_bl_updater.py  flake.nix  index.html  print.html  pyproject.toml  requirements.txt  searchindex.js  searchindex.json
.github/actions/checkout/: action.yml
.github/workflows/: mdbook-deploy.yml  mdbook.yml  pre-commit.yml
dbw-node-pins/: library.json  node-1.1.h  node-1.2.h  node-2.0.h  node_pins.h
docs/: README.md
ember-bl/: library.json
ember-bltools/: ember_app_desc.c  ember_app_desc.h  ember_bl_servicing.c  ember_bl_servicing.h  ember_bltools.c  ember_bltools.h  ember_identity.py  library.json
ember-can/: ember_can.c  ember_can_callbacks.h  library.json
ember-commonh/: library.json
ember-pio-scripts/: ember_define_identity.py  ember_identity.py  ember_install_pydeps.py  ember_opencan.py  ember_ota_target.py  requirements.txt
ember-tasking/: ember_tasking.c  tasking.c  tasking.h  watchdog.c  watchdog.h
