[build-system]
requires      = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name        = 'ember'
description = 'simple rate-based multitasking and core libraries for microcontrollers'
version     = '0.0.0'

authors = [
	{name = 'Ember Developers'},
]
license = {'text' = 'GPL-3.0-only'}

requires-python = '>=3.11'
dependencies = [
	'pip-tools',
]

[project.urls]
repo = 'https://github.com/CooperUnion/ember'

[tool.pip-tools]
allow-unsafe    = true
generate-hashes = true
strip-extras    = false
upgrade         = true
verbose         = true

[tool.setuptools.packages.find]
exclude = ['*']
